--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "pandas>=2.3.3",
+    "pytest>=9.0.1",
+    "requests>=2.32.5",
     "yfinance>=0.2.66",
 ]
