resolbido el empatequado de nuevo casi casi final

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,3 @@
-# Redshift connection
-REDSHIFT_HOST=redshift-pda-cluster.cnuimntownzt.us-east-2.redshift.amazonaws.com
-REDSHIFT_PORT=5439
-REDSHIFT_USER=2025_diego_la_greca
-REDSHIFT_PASSWORD=my_password
-REDSHIFT_DB=pda
-REDSHIFT_SCHEMA=public
-REDSHIFT_TABLE=stock_prices_history
-
-# Ruta al archivo Parquet de staging (relativa al proyecto o absoluta)
-PARQUET_PATH=data/staging/stock_prices_history.parquet
 
 """
 # Redshift connection
@@ -19,4 +8,8 @@ REDSHIFT_PASSWORD=your_password
 REDSHIFT_DB=your_database
 REDSHIFT_SCHEMA=public
 REDSHIFT_TABLE=stock_prices_history
+
+# Airflow
+AIRFLOW_UID=50000
+
 """
