--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,9 @@ REDSHIFT_DB=your_database
 REDSHIFT_SCHEMA=public
 REDSHIFT_TABLE=stock_prices_history
 
+# Ruta al archivo Parquet de staging (relativa al proyecto o absoluta)
+PARQUET_PATH=data/staging/stock_prices_history.parquet
+
 # Airflow
 AIRFLOW_UID=50000
 
